--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/typeorm": "^8.1.2",
     "@types/bcrypt": "^5.0.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
@@ -41,7 +42,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.7.0",
-    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -56,6 +56,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/multer": "^1.4.7",
